extract and map update finished

--- a/notebooks/Meeting Apr.ipynb
+++ b/notebooks/Meeting Apr.ipynb
@@ -6,8 +6,10 @@
    "source": [
     "## Roadmap\n",
     "- [x] Totally convert the project into a Julia package framework\n",
-    "- [ ] Filter all the genotypes\n",
-    "- [ ] Update map to Illumina 50k v3\n",
+    "- [x] Filter all the genotypes\n",
+    "  - Discard chromosome 0, X, Y, MT, and SNP not on platform 50k-v3\n",
+    "- [x] Update map to Illumina 50k v3\n",
+    "- [ ] QC about this subset\n",
     "- [ ] Test imputation quality\n",
     "- [ ] Impute and do genomic prediction with GBLUP"
    ]
@@ -100,7 +102,7 @@
    "metadata": {},
    "source": [
     "### Update the 5 maps of the 6 platforms\n",
-    "- [ ] Extract the SNPs in column **3.** of **Table 1**\n",
+    "- [x] Extract the SNPs in column **3.** of **Table 1**\n",
     "  - Thre rest SNP in these 5 maps will discarded.\n",
     "  - The Norwegian data has no result from 50k-v3 platform. They can't be imputed to 51730 level of 50k-v3, as data from other countries can't be used as references. Let 777k SNP set as $v_7$, the Norwegian SNP set $s = \\cup(v_1, v_2, v_7)$, then the SNP in $\\cap(s, v_3)$ will be the final target number of SNP to impute to.\n",
     "  - Thus the shared number of loci will be even smaller. I summerized the final number of shared loci in **Table 2**\n",
