summary QC step 2

--- a/notebooks/Meeting Apr.ipynb
+++ b/notebooks/Meeting Apr.ipynb
@@ -93,7 +93,7 @@
     "There are also ~3-400 SNP discrepancy between 50k-v2, 777k and 50k-v3. So the following question is whether to use 50k-v3 or 777k map.\n",
     "Since [BovineHD](ftp://webdata2:webdata2@ussd-ftp.illumina.com/downloads/productfiles/bovinehd/bovinehd-b1-annotation-file.zip) was created in 2014, [50k v3](https://support.illumina.com/content/dam/illumina-support/documents/downloads/productfiles/bovinesnp50/v3/bovinesnp50-v3-a2-manifest-file-csv.zip) was created in 2016, I will use 50k-v3 as the target map.\n",
     "\n",
-    "- [ ] I am also considering to map these SNP with the most recent genome reference\n",
+    "- I am also considering to map these SNP with the most recent genome reference\n",
     "  - If I have time"
    ]
   },
@@ -106,7 +106,7 @@
     "  - Thre rest SNP in these 5 maps will discarded.\n",
     "  - The Norwegian data has no result from 50k-v3 platform. They can't be imputed to 51730 level of 50k-v3, as data from other countries can't be used as references. Let 777k SNP set as $v_7$, the Norwegian SNP set $s = \\cup(v_1, v_2, v_7)$, then the SNP in $\\cap(s, v_3)$ will be the final target number of SNP to impute to.\n",
     "  - Thus the shared number of loci will be even smaller. I summerized the final number of shared loci in **Table 2**\n",
-    "- [ ] Update the map with 50k-v3"
+    "- [x] Update the map with 50k-v3"
    ]
   },
   {
@@ -126,7 +126,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create new plink file set\n"
+    "## Create new plink file set\n",
+    "- New file sets are now in `data/plkmax`\n",
+    "- The functions ran like a charm. Så bra!\n",
+    "- The Norwegian data seemed to have been manipulated already\n",
+    "  - The final number is a little bit smaller than those in **Table 2**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Quality check of the extracted sets\n",
+    "- This majorly "
    ]
   }
  ],
