--- a/notebooks/02-QC.ipynb
+++ b/notebooks/02-QC.ipynb
@@ -6,7 +6,12 @@
    "source": [
     "# Quality control summary\n",
     "## Conclusions and actions\n",
-    "These can be found in the notebook: **Meeting Mar**\n",
+    "- These can be found in the notebook: **Meeting Mar**\n",
+    "- Since I\n",
+    "  - extracted SNP subset\n",
+    "  - updated physical map according to Illumina 50k-v3\n",
+    "- Below results can be safely ignored --April 24, 2020\n",
+    "\n",
     "## Histograms of missing data"
    ]
   },
@@ -81,17 +86,17 @@
     "### Dutch data\n",
     "File Edit Options Buffers Tools Help      \n",
     "#### 10690\n",
-    "![Platform 10690](png/dutch-10690-maf.png)\n",
+    "<img src=\"png/dutch-10690-maf.png\" alt=\"10690\" style=\"width: 400px;\"/>\n",
     "#### 10993\n",
-    "![Platform 10993](png/dutch-10993-maf.png)\n",
+    "<img src=\"png/dutch-10993-maf.png\" alt=\"10993\" style=\"width: 400px;\"/>\n",
     "#### 11483\n",
-    "![Platform 11483](png/dutch-11483-maf.png)\n",
+    "<img src=\"png/dutch-11483-maf.png\" alt=\"11483\" style=\"width: 400px;\"/>\n",
     "#### 777k\n",
-    "![Platform 777k](png/dutch-777k-maf.png)\n",
+    "<img src=\"png/dutch-777k-maf.png\" alt=\"777k\" style=\"width: 400px;\"/>\n",
     "#### 50k v2\n",
-    "![Platform 50k v2](png/dutch-v2-maf.png)\n",
+    "<img src=\"png/dutch-v2-maf.png\" alt=\"v2\" style=\"width: 400px;\"/>\n",
     "#### 50k v3\n",
-    "![Platform 50k v3](png/dutch-v3-maf.png)"
+    "<img src=\"png/dutch-v3-maf.png\" alt=\"v3\" style=\"width: 400px;\"/>"
    ]
   },
   {
@@ -100,9 +105,9 @@
    "source": [
     "### German data\n",
     "#### 50k v2\n",
-    "![Platform 50k v2](png/german-v2-maf.png)\n",
+    "<img src=\"png/german-v2-maf.png\" alt=\"v2\" style=\"width: 400px;\"/>\n",
     "#### 50k v3\n",
-    "![Platform 50k v3](png/german-v3-maf.png)"
+    "<img src=\"png/german-v3-maf.png\" alt=\"v3\" style=\"width: 400px;\"/>"
    ]
   },
   {
@@ -111,11 +116,11 @@
    "source": [
     "### Norwegian data\n",
     "#### 777k\n",
-    "![Platform 777k](png/norge-777k-maf.png)\n",
+    "<img src=\"png/norge-777k-maf.png\" alt=\"777k\" style=\"width: 400px;\"/>\n",
     "#### 50k v1\n",
-    "![Platform 50k v1](png/norge-v1-maf.png)\n",
+    "<img src=\"png/norge-v1-maf.png\" alt=\"v1\" style=\"width: 400px;\"/>\n",
     "#### 50k v2\n",
-    "![Platform 50k v2](png/norge-v2-maf.png)"
+    "<img src=\"png/norge-v2-maf.png\" alt=\"v2\" style=\"width: 400px;\"/>"
    ]
   },
   {
