--- a/notebooks/02-QC-try-2.ipynb
+++ b/notebooks/02-QC-try-2.ipynb
@@ -16,6 +16,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- I suddenly realized that the samples **not** of their original sizes any more.\n",
+    "- It is better to merge the samples of similar SNP set sizes\n",
+    "- then do the check below\n",
+    "- Hence below can be safely **ignored** again. 😭\n",
     "## Summary\n",
     "- Figures are very similar to previous results.\n",
     "- Some somples have too small sizes. Frequency plots gave not much information\n",
