--- a/notebooks/Meeting Apr.ipynb
+++ b/notebooks/Meeting Apr.ipynb
@@ -9,7 +9,9 @@
     "- [x] Filter all the genotypes\n",
     "  - Discard chromosome 0, X, Y, MT, and SNP not on platform 50k-v3\n",
     "- [x] Update map to Illumina 50k v3\n",
-    "- [ ] QC about this subset\n",
+    "- ~~QC about this subset~~ This result should be **ignored**\n",
+    "- [x] Merge samples by country\n",
+    "  - only 3 sets finally\n",
     "- [ ] Test imputation quality\n",
     "- [ ] Impute and do genomic prediction with GBLUP"
    ]
@@ -137,8 +139,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Quality check of the extracted sets\n",
-    "- This majorly "
+    "## Merge into 3 country sets\n",
+    "- Found dozons of locuc pairs have the same chromosome numbers and bp positions\n",
+    "  - [x] Create the pair list\n",
+    "    - Total: 27 pairs\n",
+    "    - are of same chromosome and base pair position\n",
+    "  - [x] Check their manifest\n",
+    "    - All the mutation flanking sequences are 60 bp long\n",
+    "    - Visually checked: Manifests are basicly of same sequences, or reverse complements\n",
+    "      - Some strange character like `YRKSWM`, rather than `ACGTN`\n",
+    "  - [ ] Check their genotypes\n",
+    "    - Convert to VCF, and extract the corresponding genotype rows\n",
+    "    - \n",
+    "  - [ ] Remove duplicates"
    ]
   }
  ],
