--- a/notebooks/Meeting Apr.ipynb
+++ b/notebooks/Meeting Apr.ipynb
@@ -12,6 +12,7 @@
     "- ~~QC about this subset~~ This result should be **ignored**\n",
     "- [x] Merge samples by country\n",
     "  - only 3 sets finally\n",
+    "- [ ] Filter with MAF $=0.01$, and minimum 7000 loci per ID\n",
     "- [ ] Test imputation quality\n",
     "- [ ] Impute and do genomic prediction with GBLUP"
    ]
@@ -148,10 +149,91 @@
     "    - All the mutation flanking sequences are 60 bp long\n",
     "    - Visually checked: Manifests are basicly of same sequences, or reverse complements\n",
     "      - Some strange character like `YRKSWM`, rather than `ACGTN`\n",
-    "  - [ ] Check their genotypes\n",
+    "  - [x] Check their genotypes\n",
     "    - Convert to VCF, and extract the corresponding genotype rows\n",
-    "    - \n",
-    "  - [ ] Remove duplicates"
+    "    - The genotypes are the same unless one is missing\n",
+    "  - [x] Remove duplicates\n",
+    "    - Keep names of only one column of the duplicated SNP pair\n",
+    "    - Fill the genotypes if either one is not missing per ID.\n",
+    "  - [x] Remove extra SNP from Dutch, and German data\n",
+    "    - After above filter and merge, number of SNP left\n",
+    "      | Dutch | German | Norge |\n",
+    "      | --: | --: | --: |\n",
+    "      | 51599 | 51599 | 51586|\n",
+    "    - Shared across 3 countries: 51584\n",
+    "  - [x] Remove non-shared across 3 countries.\n",
+    "\n",
+    "The result 3 sets will be subject to a final round of QC"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## QC figures\n",
+    "### Dutch\n",
+    "![](qc3/dutch.png)\n",
+    "<img src=\"qc3/dutch-maf.png\" alt=\"Dutch\" style=\"width: 400px;\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### German\n",
+    "![](qc3/german.png)\n",
+    "<img src=\"qc3/german-maf.png\" alt=\"Dutch\" style=\"width: 400px;\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Norwegian\n",
+    "![](qc3/norge.png)\n",
+    "<img src=\"qc3/norge-maf.png\" alt=\"Norwegian\" style=\"width: 400px;\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Further clean\n",
+    "I do this in one step with a c++ program.\n",
+    "- [x] Remove low MAF loci by country first\n",
+    "  - Dutch $\\Rightarrow$ 45386\n",
+    "  - German $\\Rightarrow$ 45656\n",
+    "  - Norwegian $\\Rightarrow$ 46771\n",
+    "- [x] Remove low quality ID. total loci: \n",
+    "  - since the lowest number in **Table 2** is 7364\n",
+    "  - I manually remove ID with less than 7000 loci of genotypes. Approx. 95%.\n",
+    "  - Dutch 2602 $\\Rightarrow$ 2558\n",
+    "    - Valid per ID $N_{\\mathrm{loci}}\\in[6139,\\,51495]$\n",
+    "  - German 801 $\\Rightarrow$ 801.\n",
+    "    - Minimum number of valid genotypes per ID, 48826. $\\frac{48826}{49465}=98.7$%\n",
+    "    - Valid per ID $N_{\\mathrm{loci}}\\in[48826,\\,51545]$\n",
+    "  - Norwegian 13491 $\\Rightarrow$ 7755. *Too many removed?*\n",
+    "    - Refer **Table 2** $47877\\times .95\\approx 45483$\n",
+    "    - Valid per ID $N_{\\mathrm{loci}}\\in[19322,\\,49412]$\n",
+    "- [x] Remove non-shared loci across country \n",
+    "  - 44015 loci left\n",
+    "\n",
+    "Below are to be determined.\n",
+    "In summary, all on 44015 loci, missing or not, number of ID left:\n",
+    "- Dutch: **2558**\n",
+    "- German: **801**\n",
+    "- Norwegian: **7755**\n",
+    "\n",
+    "I call this **dataset I**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run Beagle on above data.\n",
+    "- [ ] Impute missing values in **dataset I**\n",
+    "  - **Important**: $N_e$ for every country?"
    ]
   }
  ],
