--- a/notebooks/Meeting Apr.ipynb
+++ b/notebooks/Meeting Apr.ipynb
@@ -170,34 +170,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## QC figures\n",
-    "### Dutch\n",
-    "![](qc3/dutch.png)\n",
-    "<img src=\"qc3/dutch-maf.png\" alt=\"Dutch\" style=\"width: 400px;\"/>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### German\n",
-    "![](qc3/german.png)\n",
-    "<img src=\"qc3/german-maf.png\" alt=\"Dutch\" style=\"width: 400px;\"/>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Norwegian\n",
-    "![](qc3/norge.png)\n",
-    "<img src=\"qc3/norge-maf.png\" alt=\"Norwegian\" style=\"width: 400px;\"/>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Further clean\n",
     "I do this in one step with a c++ program.\n",
     "- [x] Remove low MAF loci by country first\n",
@@ -231,23 +203,78 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Remove low quality loci\n",
+    "This was forgot before the meeting on Apr. 29, 2020.\n",
+    "Different thresholds of this filter should be different. Consider the platforms used in Dutch:\n",
+    "\n",
+    "| Platform | $N_{\\mathrm{ID}}$ | $N_{\\mathrm{loci}}$ |\n",
+    "| --: | --: | --: |\n",
+    "| 10690 | 1994 |  7364 |\n",
+    "| 10993 |  102 |  7438 |\n",
+    "| 11483 |  109 |  7448 |\n",
+    "| 50kv2 |  343 | 49465 |                                                                                   | 50kv3 |   44 | 51626 |\n",
+    "| 777k  |   10 | 47155 |\n",
+    "\n",
+    "Too many dutch platforms. Remove of low quality loci should be done before merging into 3 country sets.\n",
+    "\n",
+    "#### $N_{\\mathrm{loci}}$ left in German and Norwegian data\n",
+    "Using the merged (of 3 pf) one:\n",
+    "\n",
+    "| Threshold | .1 | .2 | .3 | .4 | .5 | .6 | .7 | .8 | .9 |\n",
+    "| -- | --: | --: | --: | --: | --: | --: | --: | --: | --: |\n",
+    "| German | 51612 | 51609 | 51598 | 51598 | 51574 | 51567 | 51548 | 51529 | 51410 |\n",
+    "| Norwegian | 51562 | 49468 | 49449 | 49415 | 48695 | 43691 | 43160 | 42708 | 38785 |\n",
+    "\n",
+    "Note `Threshold` is the minimal percentage of ID with valid genotypes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A plot above table:\n",
+    "![](fig/rloci.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Summary of quality per locus\n",
+    "- Hence the German data have the best quality about genotype missing per locus\n",
+    "- Norwegian data are the worst.\n",
+    "- I will remove low quality loci in Dutch and Norwegian data before merging into one set.\n",
+    "  - using threshold 70%(?)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Run Beagle on above data.\n",
     "- [ ] Impute missing values in **dataset I**\n",
-    "  - **Important**: $N_e$ for every country?"
+    "  - **Important**: $N_e$ for every country?\n",
+    "  - use $N_e =100$"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.5.0-DEV",
-   "language": "julia",
-   "name": "julia-1.5"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "file_extension": ".jl",
-   "mimetype": "application/julia",
-   "name": "julia",
-   "version": "1.5.0"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
