--- a/notebooks/Meeting Apr.ipynb
+++ b/notebooks/Meeting Apr.ipynb
@@ -11,10 +11,7 @@
     "- [x] Update map to Illumina 50k v3\n",
     "- ~~QC about this subset~~ This result should be **ignored**\n",
     "- [x] Merge samples by country\n",
-    "  - only 3 sets finally\n",
-    "- [ ] Filter with MAF $=0.01$, and minimum 7000 loci per ID\n",
-    "- [ ] Test imputation quality\n",
-    "- [ ] Impute and do genomic prediction with GBLUP"
+    "  - only 3 sets finally"
    ]
   },
   {
