--- a/notebooks/Meeting May.ipynb
+++ b/notebooks/Meeting May.ipynb
@@ -8,9 +8,13 @@
     "- [x] New plot way of missing values\n",
     "  - So that it is easier to determine which SNP/ID to be filtered away\n",
     "  - This is the main reason to obsolete the previous notebook\n",
-    "- [ ] Check the Norwegian data set.\n",
+    "- [x] Check the Norwegian data set.\n",
+    "  - Request new data on platform $V_2$\n",
+    "- Below are then just some functions waiting for button pressed\n",
     "- [ ] Remove low quality loci\n",
     "- [ ] Remove low quality ID\n",
+    "- [ ] Remove platform specific SNP again.\n",
+    "  - or, find the intersection of 3 supersets of 3 countries.\n",
     "- [ ] Merge above results into new 3-set data for imputation\n",
     "- [ ] Impute for GBLUP\n",
     "  - With some forward $R^2$ info about imputation quality"
@@ -23,28 +27,28 @@
     "# QC with new plots\n",
     "## SNP control\n",
     "### Missing values and Hardy-Weinberg Equillibrium\n",
-    "![](fig/dutch-10690-ms-hwe.png)"
+    "![](fig/dutch-d1-ms-hwe.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](fig/dutch-10993-ms-hwe.png)"
+    "![](fig/dutch-d2-ms-hwe.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](fig/dutch-11483-ms-hwe.png)"
+    "![](fig/dutch-d3-ms-hwe.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](fig/dutch-777k-ms-hwe.png)"
+    "![](fig/dutch-v7-ms-hwe.png)"
    ]
   },
   {
@@ -79,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](fig/norge-777k-ms-hwe.png)"
+    "![](fig/norge-v7-ms-hwe.png)"
    ]
   },
   {
@@ -94,6 +98,16 @@
    "metadata": {},
    "source": [
     "![](fig/norge-v2-ms-hwe.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another way to remove low quality SNP is to let $|O_{\\mathrm{HET}} - E_{\\mathrm{HET}}| < 0.15$. I summarized the number of SNP to be removed in the following table:\n",
+    "\n",
+    "| Threshold | dd1 | dd2 | dd3 | dv2 | dv3 | gv2 | gv3 | nv1 | nv7 | $\\Sigma_{\\mathrm{unique}}$ |\n",
+    "| -- | --: | --: | --: | --: | --: | --: | --: | --: | --: | --: |\n"
    ]
   },
   {
@@ -116,8 +130,11 @@
     "- German data came last, but seems to have best quality.\n",
     "\n",
     "#### Action\n",
-    "- I will check Norwegian $V_2$ first\n",
-    "- Then remove low quality loci."
+    "- [x] I will check Norwegian $V_2$ first\n",
+    "  - Looks like some random genotypes\n",
+    "  - Requesting new genotypes\n",
+    "- Then remove low quality loci.\n",
+    "  - platform by platform"
    ]
   },
   {
