1st meeting May

--- a/notebooks/Meeting May.ipynb
+++ b/notebooks/Meeting May.ipynb
@@ -7,10 +7,8 @@
     "# Roadmap\n",
     "- [x] New plot way of missing values\n",
     "  - So that it is easier to determine which SNP/ID to be filtered away\n",
-    "  - This is the main reason to obsolete the previous notebook\n",
     "- [x] Check the Norwegian data set.\n",
     "  - Request new data on platform $V_2$\n",
-    "- Below are then just some functions waiting for button pressed\n",
     "- [x] Remove low quality loci\n",
     "  - [x] Also do a brief statistics\n",
     "- [x] Remove low quality ID\n",
@@ -254,6 +252,23 @@
     "- I removed country specific SNP at this stage\n",
     "  - 42861 SNP left for downstream\n",
     "- Imputation was based on above set."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Considerations\n",
+    "- Remove country specific SNP after imputation\n",
+    "- Imputation took most of the time in above steps, ca 30-60minutes.\n",
+    "- $nv_2$ is a trouble maker.\n",
+    "  - Actually none of the 3 file sets, $nv_{1,2,7}$, from Norway can go through `beagle.jar`\n",
+    "  - After QC, the missing rate can go up to **>80%** if convert from `bed` to `vcf` again.\n",
+    "- Another issue is same SNP on different platforms allele-1 and allele-2\n",
+    "  - will they affect genotypes if not unified?\n",
+    "  - Unification about these? Any experience?\n",
+    "- Going through above pipeline take maximally 1-2hr\n",
+    "  - Hence suggestions are very important."
    ]
   }
  ],
