--- a/notebooks/Meeting May 06.ipynb
+++ b/notebooks/Meeting May 06.ipynb
@@ -268,7 +268,14 @@
     "  - will they affect genotypes if not unified?\n",
     "  - Unification about these? Any experience?\n",
     "- Going through above pipeline take maximally 1-2hr\n",
-    "  - Hence suggestions are very important."
+    "  - Hence suggestions are very important.\n",
+    "  \n",
+    "### About the codes\n",
+    "- ~2k lines\n",
+    "  - many thrown away\n",
+    "  - many can be thrown\n",
+    "  - many can be reused\n",
+    "- ~2h to run to date."
    ]
   }
  ],
