--- a/notebooks/Meeting May 13.ipynb
+++ b/notebooks/Meeting May 13.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# Roadmap\n",
-    "- [ ] Using AB genotypes\n",
+    "- [x] Using AB genotypes\n",
+    "  - Only Dutch and German data available. **Norwegian** data missing.\n",
     "- [ ] Require genotypes in `final report` format from GENO\n",
     "- [ ] Run pipeline to imputation, using\n",
     "  - MAF $=0.01$\n",
@@ -27,15 +28,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.4.0",
+   "display_name": "Julia 1.6.0-DEV",
    "language": "julia",
-   "name": "julia-1.4"
+   "name": "julia-1.6"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.4.0"
+   "version": "1.6.0"
   }
  },
  "nbformat": 4,
