Genotypes ready for G matrix

--- a/notebooks/Meeting May 13.ipynb
+++ b/notebooks/Meeting May 13.ipynb
@@ -7,7 +7,7 @@
     "# A summary of mid-results\n",
     "## Genotypes roadmap\n",
     "The genotypes I received were stored in `data/genotypes/{dutch,german,norge}`. Then each folder of below:\n",
-    "- **Step-1.plk**: Merged final reports to plink.ped, using `AB` fields.\n",
+    "- **Step-1.plk**: Merged final reports to plink.ped, using `Top` fields.\n",
     "  - Chromosome and bp info were also updated with $v_3$.map.\n",
     "  - Used `Top` columns in the final reports.\n",
     "  - `AB` are illegel to beagle.jar\n",
