--- a/notebooks/Meeting May 26.ipynb
+++ b/notebooks/Meeting May 26.ipynb
@@ -73,7 +73,9 @@
    "metadata": {},
    "source": [
     "## ID missing values\n",
-    "<img src=\"fig/norge-v1-imiss.png\" style=\"width: 400px;\"/><img src=\"fig/norge-v2-imiss.png\" style=\"width: 400px;\"/><img src=\"fig/norge-v7-imiss.png\" style=\"width: 400px;\"/>"
+    "![](fig/norge-v1-imiss.png)\n",
+    "![](fig/norge-v2-imiss.png)\n",
+    "![](fig/norge-v7-imiss.png)"
    ]
   },
   {
