--- a/notebooks/Meeting May 26.ipynb
+++ b/notebooks/Meeting May 26.ipynb
@@ -24,7 +24,9 @@
     "  - Merge to 4 platforms, $v_0, v_1, v_2, v_7$.\n",
     "    - as the two files of said v1 platform have 43180 ($\\to v_0$) or 54001 ($\\to v_1$) loci.\n",
     "  - Apply procedure last week\n",
-    "- [x] Make data from all countries ready for G matrix calculation."
+    "- [x] Make data from all countries ready for G matrix calculation.\n",
+    "- [ ] Prepare genotypes for multi-breed $\\mathbf{G}$ calculation\n",
+    "- [ ] Calculate $\\mathbf{G}$ of 3 countries."
    ]
   },
   {
@@ -90,6 +92,14 @@
     "\n",
     "After remove country specific SNP:\n",
     "- 44037 SNP available for downstreams"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculation of GRM\n",
+    "![](fig/diag.png)"
    ]
   }
  ],
