classify jl files

--- a/notebooks/Meeting May 27.ipynb
+++ b/notebooks/Meeting May 27.ipynb
@@ -25,8 +25,8 @@
     "    - as the two files of said v1 platform have 43180 ($\\to v_0$) or 54001 ($\\to v_1$) loci.\n",
     "  - Apply procedure last week\n",
     "- [x] Make data from all countries ready for G matrix calculation.\n",
-    "- [ ] Prepare genotypes for multi-breed $\\mathbf{G}$ calculation\n",
-    "- [ ] Calculate $\\mathbf{G}$ of 3 countries."
+    "- [x] Prepare genotypes for multi-breed $\\mathbf{G}$ calculation\n",
+    "- [x] Calculate $\\mathbf{G}$ of 3 countries."
    ]
   },
   {
